--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -100,7 +100,7 @@ h4{
     font-family: "exo2";
     color: #002476;
     font-size: 30px;
-    margin: 15px 0 15px 0;
+    margin: 0px 0 15px 0;
 }
 
 .item-header{
@@ -125,6 +125,77 @@ h4{
 .light{
     font-family: "exo-light";
     margin-bottom: 30px;
+    color: #575a61;
+    line-height: 22px;
+}
+
+.button-load{
+    width: 210px;
+    height: 70px;
+    font-family: "exo2";
+    font-size: 18px;
+}
+
+input[type="file"] {
+    display: none;
+}
+.custom-file-upload {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 8px 0px;
+    cursor: pointer;
+    border: none;
+}
+
+.top-info__button {
+
+    text-align: center;
+    color: #002476;
+    font-size: 18px;
+    padding: 12px 20px;
+    border-radius: 2px;
+    border: 2px solid #fb0e52;
+    text-decoration: none;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    font-weight: 500;
+    width: 210px;
+    font-family: 'exo2'
+}
+
+.top-info__button:hover {
+    color: #ffffff;
+    background: #fb0e52;
+    -webkit-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+
+.button{
+    border: 0px;
+    text-align: center;
+    outline: none;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: 18px;
+    text-decoration: none;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    font-weight: 500;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: #fb0e52;
 }
 
 .item-ancor{
@@ -240,6 +311,14 @@ h4{
     background-position: right 10px center;
 }
 
+.textarea-form{
+    width: 100%;
+    max-width: 880px;
+    height: 178px;
+    border: 2px solid #e8e8e8;
+    border-radius: 2px;
+}
+
 .color-default {
     color: #959595;
 }
@@ -257,8 +336,10 @@ h4{
 [type="checkbox"]:not(:checked) + label,
 [type="checkbox"]:checked + label {
   position: relative;
-  padding-left: 25px;
+  padding-left: 50px;
+  padding-top: 9px;
   cursor: pointer;
+  height: 40px;
 }
 
 /* checkbox aspect */
@@ -266,21 +347,24 @@ h4{
 [type="checkbox"]:checked + label:before {
   content: '';
   position: absolute;
-  left:0; top: 2px;
-  width: 17px; height: 17px;
+  left:0; 
+  top: 2px;
+  width: 33px; 
+  height: 33px;
   border: 1px solid #aaa;
   background: #f8f8f8;
   border-radius: 3px;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.3)
 }
 /* checked mark aspect */
 [type="checkbox"]:not(:checked) + label:after,
 [type="checkbox"]:checked + label:after {
   content: '✔';
   position: absolute;
-  top: 0; left: 4px;
-  font-size: 14px;
-  color: blue;
+  top: 3px; 
+  left: 9px;
+  font-size: 23px;
+  font-weight: bold;
+  color: #fb0e52;
   transition: all .2s;
 }
 /* checked mark aspect changes */
