--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -28,8 +28,8 @@
 html{
     width: 100%;
     max-width: 1920px;
-    margin: 0 auto;
     overflow-x: hidden;
+    margin: 0 auto;
 }
 
 .wrapper-content{
@@ -328,6 +328,10 @@ input[type="file"] {
     color: #fb0e52;
 }
 
+.bg-gray{
+    background: #ebeff6;
+}
+
 .poly-style select {
     width: 434px;
     height: 50px;
@@ -351,6 +355,12 @@ input[type="file"] {
 
 .ml-20px{
     margin-left: -20px;
+}
+
+.al-cent{
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 35px;
 }
 
 .textarea-form{
@@ -426,11 +436,13 @@ input[type="file"] {
 [type="checkbox"]:checked + label:after {
   content: '✔';
   position: absolute;
-  top: 3px; 
+  top: 13px; 
   left: 9px;
   font-size: 23px;
   font-weight: bold;
-  color: #fb0e52;
+  color: transparent;
+  background-image: url(img/check-mini.png);
+  background-repeat: no-repeat;
   transition: all .2s;
 }
 /* checked mark aspect changes */
@@ -470,6 +482,60 @@ label:hover:before {
     margin-bottom: 50px;
 }
 
+.style-pagination {
+    background: #fb0e52;
+    width: 123px !important;
+    height: 30px; 
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex !important;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center !important;
+}
+
+.swiper-pagination{
+    width: 123px;
+    -webkit-transition: .3s opacity;
+    -o-transition: .3s opacity;
+    transition: .3s opacity;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+    z-index: 10;
+    margin-top: 20px;
+    top: 218px;
+}  
+
+.swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-bullet {
+    width: 9px;
+    height: 9px;
+    display: inline-block;
+    border-radius: 100%;
+    background: #fff;
+    opacity: 0.7;
+} 
+
+.swiper-pagination-bullet-active{
+    width: 12px !important;
+    height: 12px !important;
+}
+
+.swiper-container{
+    width: 1179px;
+    height: 270px;
+}
+
+.gallery{
+    padding-top: 60px;
+    margin-bottom: 50px;
+}
+
 @media screen and (max-width: 1169px){
     html{
         padding: 0 21px 0 21px;
@@ -486,11 +552,17 @@ label:hover:before {
     .form-adaptive{
         order: -2;
     }
+    .swiper-pagination{
+        display: none !important;
+    }
 }
 
 @media screen and (max-width: 946px){
     .number-input{
         margin-top: 20px;
+    }
+    .color-default{
+        margin-bottom: 20px;
     }
 }
 
