--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -22,7 +22,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 html{
@@ -39,26 +40,36 @@ html{
 }
 
 .flex{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .wrap{
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 }
 
 .flex-between{
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 .production-item{
     width: 384px;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;   
     position: relative;
 }
 
 .production-item:hover{
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
-    box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.1);
 }
 
 .item-long{
@@ -77,11 +88,15 @@ html{
     background-color: #00216b;
     padding: 15px 30px 15px 30px;
     text-align: center;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
 }
 
 .main-navigation li:hover{
     background-color: #ff0553;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
 }
 
@@ -214,19 +229,15 @@ input[type="file"] {
     font-size: 18px;
     text-decoration: none;
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
-    -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
     font-weight: 500;
-    -webkit-border-radius: 2px;
     border-radius: 2px;
     background: #fb0e52;
 }
@@ -244,15 +255,12 @@ input[type="file"] {
     height: 60px;
     background: #fb0e52;
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
     -webkit-box-align: center;
-    -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
     -webkit-transition: all 0.3s;
@@ -294,7 +302,6 @@ input[type="file"] {
     border: 2px solid #e8e8e8;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-border-radius: 2px;
     border-radius: 2px;
     outline: none;
     padding: 0px 18px;
@@ -338,7 +345,6 @@ input[type="file"] {
     border: 2px solid #e8e8e8;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    -webkit-border-radius: 2px;
     border-radius: 2px;
     outline: none;
     padding: 0px 30px 0px 18px;
@@ -380,6 +386,30 @@ input[type="file"] {
 
 .select-custom{
     margin: 0px 20px 20px 0;
+}
+
+.textarea-form::-webkit-input-placeholder{
+    font-family: "exo-light";
+    font-size: 16px;
+    color: #959798;
+}
+
+.textarea-form::-moz-placeholder{
+    font-family: "exo-light";
+    font-size: 16px;
+    color: #959798;
+}
+
+.textarea-form:-ms-input-placeholder{
+    font-family: "exo-light";
+    font-size: 16px;
+    color: #959798;
+}
+
+.textarea-form::-ms-input-placeholder{
+    font-family: "exo-light";
+    font-size: 16px;
+    color: #959798;
 }
 
 .textarea-form::placeholder{
@@ -443,21 +473,28 @@ input[type="file"] {
   color: transparent;
   background-image: url(img/check-mini.png);
   background-repeat: no-repeat;
+  -webkit-transition: all .2s;
+  -o-transition: all .2s;
   transition: all .2s;
 }
 /* checked mark aspect changes */
 [type="checkbox"]:not(:checked) + label:after {
   opacity: 0;
-  transform: scale(0);
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
 }
 [type="checkbox"]:checked + label:after {
   opacity: 1;
-  transform: scale(1);
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
 }
 /* disabled checkbox */
 [type="checkbox"]:disabled:not(:checked) + label:before,
 [type="checkbox"]:disabled:checked + label:before {
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
   border-color: #bbb;
   background-color: #ddd;
 }
@@ -487,15 +524,12 @@ label:hover:before {
     width: 123px !important;
     height: 30px; 
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex !important;
     -webkit-box-align: center;
-    -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center !important;
 }
@@ -547,10 +581,14 @@ label:hover:before {
         margin-right: 10px;
     }
     .flex-between{
-        justify-content: center;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
     }
     .form-adaptive{
-        order: -2;
+        -webkit-box-ordinal-group: -1;
+            -ms-flex-order: -2;
+                order: -2;
     }
     .swiper-pagination{
         display: none !important;
@@ -568,7 +606,9 @@ label:hover:before {
 
 @media screen and (max-width: 722px){
     .mobile-form{
-        order: -3;
+        -webkit-box-ordinal-group: -2;
+            -ms-flex-order: -3;
+                order: -3;
     }
     .button1{
     margin-right: 20px;
