--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -127,7 +127,7 @@ h4{
 .item-header{
     font-family: "exo-20-bold";
     font-weight: bold;
-    font-size: 14px;
+    font-size: 16px;
     color: #002476;
     text-transform: uppercase;
     margin: 25px 0 23px 0;
@@ -170,7 +170,6 @@ input[type="file"] {
 }
 
 .top-info__button {
-
     text-align: center;
     color: #002476;
     font-size: 18px;
@@ -563,7 +562,7 @@ label:hover:before {
 }
 
 .swiper-container{
-    width: 1179px;
+    width: 100%;
     height: 278px;
 }
 
@@ -632,5 +631,19 @@ label:hover:before {
     }
     .custom-file-upload{
         margin-top: 20px;
+    }
+    .swiper-slide img{
+        width: 100%;
+        max-width: 320px;
+        height: auto;
+        margin-right: 20px;
+    }
+
+    .swiper-slide{
+        margin-right: 20px;
+    }
+
+    .poly-style{
+        width: 85%;
     }
 }
