--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -672,7 +672,7 @@ label:hover:before {
     }
 
     .swiper-slide{
-        margin-right: 20px;
+        margin-right: 1.4%;
     }
 
     .poly-style{
