--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -666,14 +666,14 @@ label:hover:before {
     }
     .swiper-slide img{
         width: 100%;
-        max-width: 320px;
+        max-width: 100%;
         height: auto;
-        margin-right: 20px;
+        /* margin-right: 20px; */
     }
 
-    .swiper-slide{
+    /* .swiper-slide{
         margin-right: 1.4%;
-    }
+    } */
 
     .poly-style{
         width: 100%;
@@ -699,8 +699,8 @@ label:hover:before {
         width: 100%;
     }
 
-    .swiper-slide img,
+    /* .swiper-slide img,
     .swiper-slide{
         width: 80vw
-    }
+    } */
 }
