--- a/it_sint/style.css
+++ b/it_sint/style.css
@@ -26,7 +26,7 @@
             box-sizing: border-box;
 }
 
-html{
+.page-wrapper{
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
@@ -83,32 +83,7 @@ html{
     margin-right: 280px;
 }
 
-.main-navigation a li{
-    background-color: #00216b;
-    padding: 15px 30px 15px 30px;
-    text-align: center;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.main-navigation li:hover{
-    background-color: #ff0553;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-}
-
-.main-navigation a{
-    font-family: "exo2";
-    font-weight: bold;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-}
-
-h3{
+.sub-header-h3{
     font-family: "exo2";
     font-size: 40px;
     color: #002476;
@@ -116,7 +91,7 @@ h3{
     margin-bottom: 25px;
 }
 
-h4{
+.sub-header-h4{
     font-family: "exo2";
     color: #002476;
     font-size: 26px;
@@ -293,11 +268,11 @@ input[type="file"] {
 
 /* forms */
 
-.poly-style {
+.custom-form {
     position: relative;
 }
 
-.poly-style input {
+.custom-form input {
     width: 434px;    
     height: 50px;
     border: 2px solid #e8e8e8;
@@ -311,7 +286,7 @@ input[type="file"] {
     margin: 0 20px 20px 0;
 }
 
-.poly-style input + label {
+.custom-form input + label {
     display: inline-block;
     position: absolute;
     margin: auto;
@@ -332,7 +307,7 @@ input[type="file"] {
     font-family: "exo-light";
 }
 
-.poly-style span {
+.custom-form span {
     color: #fb0e52;
 }
 
@@ -340,7 +315,7 @@ input[type="file"] {
     background: #ebeff6;
 }
 
-.poly-style select {
+.custom-form select {
     width: 434px;
     height: 50px;
     border: 2px solid #e8e8e8;
@@ -386,7 +361,7 @@ input[type="file"] {
     outline: none;
 }
 
-.poly-style select:focus,
+.custom-form select:focus,
 .textarea-form:focus {
     border: 0px;
     -webkit-box-shadow: 0px 1px 17px 0px rgba(0, 0, 0, 0.27);
@@ -582,11 +557,15 @@ label:hover:before {
     margin-bottom: 50px;
 }
 
-.poly-style input:focus {
+.custom-form input:focus {
     border: 0px;
     -webkit-box-shadow: 0px 1px 17px 0px rgba(0, 0, 0, 0.27);
     box-shadow: 0px 1px 17px 0px rgba(0, 0, 0, 0.27);
   }
+
+.center-pagination{
+    margin-left: 530px;
+}
 
 @media screen and (max-width: 1169px){
     html{
@@ -634,11 +613,11 @@ label:hover:before {
     .custom-file-upload{
         padding: 0px;
     }
-    .poly-style{
+    .custom-form{
         width: 100%;
     }
-    .poly-style input,
-    .poly-style select,
+    .custom-form input,
+    .custom-form select,
     .select-custom,
     .bottom-button{
         width: 100%;
@@ -651,8 +630,8 @@ label:hover:before {
     }
 }
 @media screen and (max-width: 500px){
-    .poly-style input,
-    .poly-style select{
+    .custom-form input,
+    .custom-form select{
         width: 100%;
     }
     .select-custom{
@@ -670,10 +649,10 @@ label:hover:before {
         height: auto;
     }
 
-    .poly-style{
+    .custom-form{
         width: 100%;
     }
-    .poly-style input + label{
+    .custom-form input + label{
         font-size: 13px;
     }
 }
