--- a/english_school/style.css
+++ b/english_school/style.css
@@ -542,7 +542,7 @@ body > section.timer > div.wrapper-content > div > div:nth-child(4) > p{
     margin-bottom: 40px;
 }
 
-.fwrap{
+.wrap{
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
 }
@@ -1038,9 +1038,6 @@ footer{
   }
 
 .popup-header{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     border-radius: 20px 20px 0 0;
     position: relative;
 }
@@ -1053,9 +1050,6 @@ footer{
 }
 
 .info{
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
 }
