--- a/test1/style.css
+++ b/test1/style.css
@@ -1,93 +1,250 @@
-body, p{
+@font-face {
+    font-family: "adineuePRO-bold";
+    src: url("fonts/adineuePRO-bold.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+   }
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 12px;
 }
 
-.range-item{
-    width: 350px;
+html{
+    font-family: "adineuePRO-bold";
+    width: 100%;
+    max-width: 1440px;
     margin: 0 auto;
-    margin-top: 15%;
-    border: 1px solid #676767;
-    border-radius: 7px;
-    box-shadow: 0px 0px 21px -2px grey;
-    background-color: #f3f3f3;
 }
 
-.range-header{
+header{
+    width: 100%;
+}
+
+.header-wrapper{
+    height: 75px;
+    background-color: #c9c5c3;
+    opacity: 0.9;
+    padding: 0 30px 0 30px;
+    position: fixed;
+    top: 0;
+    width: 1440px;
+    z-index: 5;
+}
+
+button{
+    font-family: "adineuePRO-bold";
+    background-color: #5276b4;
     color: #ffffff;
-    background-color: #4a4849;
-    padding: 10px 0 10px 15px;
-    border-radius: 5px 5px 0 0;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: 1.5px;
+    border: 0;
+    cursor: pointer;
+    border-radius: 40px;
 }
 
-.wrapper{
-    padding: 10px;
+.button-header{
+    width:230px;
+    height: 45px;
+    margin-top: 14px;
 }
 
+/* burger-menu */
+.container-menu {
+    cursor: pointer;
+    margin-top: -60px;
+}
+
+svg {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+  
+.active svg {
+    transform: rotate(90deg);
+}
+  
+path {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+  
+path:nth-child(1) {
+    transform-origin: 36% 40%;
+}
+  
+path:nth-child(2) {
+    stroke-dasharray: 29 299;
+}
+  
+path:nth-child(3) {
+    transform-origin: 35% 63%;
+}
+  
+path:nth-child(4) {
+    stroke-dasharray: 29 299;
+}
+  
+path:nth-child(5) {
+    transform-origin: 61% 52%;
+}
+  
+path:nth-child(6) {
+    transform-origin: 62% 52%;
+}
+  
+.active path:nth-child(1) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
+}
+  
+.active path:nth-child(2) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+}
+  
+.active path:nth-child(3) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+}
+  
+.active path:nth-child(4) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+}
+  
+.active path:nth-child(5) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+}
+  
+.active path:nth-child(6) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
+}
+  
 .flex{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: 10px;
-  position: relative;
-}
-
-.range-main{
-     border: 1px solid #d5d5d5;
-     border-radius: 5px;
-}
-
-.value{
-    margin: 0 auto;
-}
-
-.range-target{
-    width: 50px;
-    height: 40px;
-    border-radius: 3px;
-    color: #ffffff;
-    background-color: #888485;
-    text-align: center;
-}
-
-.flex-wrapper{
     display: flex;
 }
 
-input[type=range] {
-    -webkit-appearance: none;
-    margin: 18px 0;
-    width: 122px;
-  }
+.wrap{
+    flex-wrap: wrap;
+}
 
-  input[type=range]:focus {
-    outline: none;
-  }
+.jc-sa{
+    justify-content: space-around;
+}
 
-  input[type=range]::-webkit-slider-runnable-track {
-    width: 122px;
-    height: 13px;
-    cursor: pointer;
-    background: #c9cfc3;
-    border-radius: 1.3px;
-    border: 0.2px solid #010101;
-  }
+.dropdown-menu{
+    width: 118px;
+    height: 160px;
+    background-color: #ffffff;
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
+    text-align: center;
+    padding: 25px 0 25px 0;
+}
 
-  input[type=range]::-webkit-slider-thumb {
-    border: 5px solid transparent;	
-    border-bottom: 5px solid #635e5a;
-    height: 5px;
-    width: 5px;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: 10px;
-    z-index: 22;
-    content: "123"
-  }
+.dropdown-menu img:nth-child(2){
+    margin-top: -40px;
+}
 
-  input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #c9cfc3;
-  }
- 
+.header-contacts{
+    text-align: center;
+    margin-top: 14px;
+}
+
+.phone{
+    font-size: 25px;
+}
+
+.header-text{
+    font-size: 15px;
+}
+
+.top-form{
+    background-image: url(img/main.png);
+    /* clip-path: polygon(0 0, 100% 0, 100% 91%, 0% 100%); */
+    height: 970px;
+    padding: 170px 170px 300px 170px;;
+    text-align: center;
+}
+
+section{
+    position: relative;
+    overflow: hidden;
+}
+
+.clip::after{
+    content: '';
+    position: absolute;
+    height: 20px;
+    bottom: 0;
+    left: 0;
+    height: 0;
+    border-bottom: 90px solid white;
+    border-left: 1440px solid transparent;
+}
+
+h1{
+    font-size: 40px;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.top-form  p:nth-child(2){
+    font-size: 40px;
+    color: #ffffff;
+    letter-spacing: 3px;
+    margin-bottom: 100px;
+}
+
+.top-form  p:nth-child(3){
+    font-size: 30px;
+    color: #ffffff;
+    letter-spacing: 3px;
+    line-height: 40px;
+}
+
+input:not([type="checkbox"]){
+    width: 350px;
+    height: 45px;
+    border-radius: 40px;
+    border: none;
+    margin-bottom: 25px;
+    padding-left: 25px;
+}
+
+.top-form > input.tnved{
+    width: 167px;
+    height: 31px;
+    border-radius: 5px;
+}
+
+
+
+
+.offer{
+    background-image: url(img/cropped-cj8nd0rnt003ks6qpbpxxru.jpg);
+    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
+    padding-top: 235px;
+    padding-bottom: 180px;
+}
+
+.offer-item{
+    width: 383px;
+}
+
+
+
+footer{
+    background-image: url(/img/Footer.jpg);
+    clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+    height: 695px;
+    padding-top: 135px;
+    padding-bottom: 190px;
+}
+
+.footer-contact p{
+    color: #000000;
+}
+
+
