--- a/colibri/css/style.css
+++ b/colibri/css/style.css
@@ -45,7 +45,7 @@ html{
 
 header{
     width: 100%;
-    max-width: 1440px;
+    max-width: 1920px;
     position: relative;
     margin: 0 auto;
 }
@@ -55,12 +55,13 @@ header{
     background-color: #ffffff;
     opacity: 0.8;
     padding: 0 30px 0 30px;
-    position: fixed;
+    position: absolute;
     top: 0;
-    width: 1440px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 1920px;
     z-index: 5;
     padding-left: 16%;
+    padding-right: 16%;
 }
 
 button{
@@ -83,6 +84,10 @@ a[name]{
     width:230px;
     height: 45px;
     margin-top: 14px;
+    position: absolute;
+    right: 5%;
+    opacity: 1;
+    z-index: 5;
 }
 
 .text-button{
@@ -127,6 +132,12 @@ a[name]{
     justify-content: center;
 }
 
+.sticky{
+    position: sticky;
+    z-index: 30;
+    top: -2px;
+}
+
 .dropdown-menu{
     width: 118px;
     height: 160px;
@@ -135,7 +146,7 @@ a[name]{
     text-align: center;
     padding: 25px 0 25px 0;
     opacity: 1;
-    position: fixed;
+    position: absolute;
     z-index: 22;
     left: 8%;
 }
@@ -381,6 +392,7 @@ input[type='number'] {
 
 .why-item{
     margin-bottom: 45px;
+    cursor: pointer;
 }
 
 .why-item img{
@@ -986,6 +998,19 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     }
 }
 
+@media screen and (max-width: 1050px){
+    .phone,
+    .header-text{
+        font-size: 1.5vh;
+    }
+    .header-wrapper{
+        padding-right: 27%;
+    }
+    .skew-normal div{
+        justify-content: center;
+    }
+}
+
 @media screen and (max-width: 883px){
     .form-short{
         width: 350px !important;
@@ -993,17 +1018,24 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     .button-header{
         display: none;
     }
+    .header-wrapper{
+        padding-right: 0%;
+    }
+    .arrow{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 650px){
     .top-form{
-        padding: 100px 0px 150px 0px;
+        padding: 160px 0px 150px 0px;
     }
     input:not([type="checkbox"]),
     .form-short{
         width: 90% !important;
     }
-    h3{
+    h3,
+    h1{
         font-size: 30px;
     }
     .questions{
@@ -1013,10 +1045,7 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     .header-wrapper{
         height: auto;
     }
-    .phone,
-    .header-text{
-        font-size: 10px;
-    }
+
     .item-long .item-text{
         font-size: 10px;
     }
@@ -1034,6 +1063,17 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     }
     .timer h3{
         white-space: pre-wrap;
+    }
+    .why-item{
+        width: 100%;
+    }
+    .why-scroll{
+        width: 100%;
+        padding-right: 0px;
+        overflow-y: visible
+    }
+    body > section.why.clip.clip-top > div > div > div.tabs-content.active{
+        width: 100%;
     }
 }
 
