--- a/colibri/css/style.css
+++ b/colibri/css/style.css
@@ -732,6 +732,12 @@ body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button
     padding-right: 20px;
     padding-left: 10px;
     margin-bottom: 10px;
+    transition: 0.5s;
+}
+
+.item:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
 }
 
 .scheme{
