--- a/colibri/css/style.css
+++ b/colibri/css/style.css
@@ -1057,7 +1057,7 @@ footer img{
 }
 
 .little-logo{
-    opacity: 1;
+    opacity: 0;
 }
 
 .not_me_remove .popup-form{
@@ -1148,6 +1148,13 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
         -webkit-box-pack: center;
             -ms-flex-pack: center;
                 justify-content: center;
+    }
+    .little-logo{
+        opacity: 1;
+    }
+    .main-logo,
+    .overlay-start{
+        display: none;
     }
 }
 
