--- a/sew/style.css
+++ b/sew/style.css
@@ -1,9 +1,50 @@
 .items{
-    width: 80%;
+    width: 90%;
     overflow-x: auto;
     display: flex;
 }
 
 .catalog-item{
     min-width: 310px;
+}
+
+.items::-webkit-scrollbar-button {
+    background-image:url('');
+    background-repeat:no-repeat;
+    width:6px;
+    height:0px
+}
+    
+.items::-webkit-scrollbar-track {
+    background-color:#32312e;
+    box-shadow:0px 0px 3px #000 inset;
+}
+    
+.items::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    background-color:#BA3330;
+    box-shadow:0px 1px 1px #fff inset;
+    background-image:url(59610063.png);
+    background-position:center;
+    background-repeat:no-repeat;
+}
+    
+.items::-webkit-resizer{
+    background-image:url('');
+    background-repeat:no-repeat;
+    width:7px;
+    height:0px
+}
+    
+.items::-webkit-scrollbar{
+    width: 11px;
+    height: 11px;
+}
+
+@media (max-width: 767px){
+    .items{
+        height: 880px;
+        padding-top: 25px;
+    }
 }
