--- a/sew/style.css
+++ b/sew/style.css
@@ -5,7 +5,7 @@
 }
 
 .catalog-item{
-    min-width: 310px;
+    min-width: 430px;
 }
 
 .items::-webkit-scrollbar-button {
@@ -72,6 +72,11 @@
     margin-left: 20px;
     border-bottom: 1px dotted;
 }
+
+.item-info{
+    height: auto !important;
+}
+
 
 @media (max-width: 1300px){
     .catalog-item{
