--- a/sew/style.css
+++ b/sew/style.css
@@ -1,26 +1,26 @@
-.items{
+.items_compare{
     width: 90%;
     overflow-x: auto;
     display: flex;
 }
 
-.catalog-item{
+.catalog-item_compare{
     min-width: 430px;
 }
 
-.items::-webkit-scrollbar-button {
+.items_compare::-webkit-scrollbar-button {
     background-image:url('');
     background-repeat:no-repeat;
     width:6px;
     height:0px
 }
     
-.items::-webkit-scrollbar-track {
+.items_compare::-webkit-scrollbar-track {
     background-color:#32312e;
     box-shadow:0px 0px 3px #000 inset;
 }
     
-.items::-webkit-scrollbar-thumb {
+.items_compare::-webkit-scrollbar-thumb {
     -webkit-border-radius: 5px;
     border-radius: 5px;
     background-color:#BA3330;
@@ -30,14 +30,14 @@
     background-repeat:no-repeat;
 }
     
-.items::-webkit-resizer{
+.items_compare::-webkit-resizer{
     background-image:url('');
     background-repeat:no-repeat;
     width:7px;
     height:0px
 }
     
-.items::-webkit-scrollbar{
+.items_compare::-webkit-scrollbar{
     width: 11px;
     height: 11px;
 }
@@ -73,13 +73,13 @@
     border-bottom: 1px dotted;
 }
 
-.item-info{
+.item-info_compare{
     height: auto !important;
 }
 
 
 @media (max-width: 1300px){
-    .catalog-item{
+    .catalog-item_compare{
         min-width: 278px;
     }
 }
